OPTIMIZE, ANALYZE, CHECK, REPAIR and REBUILD only supported if fast_alter_partition flag set

mysql-test/r/ndb_partition_key.result:
  New test cases for BUG #16819, 16821, and 16822
mysql-test/t/ndb_partition_key.test:
  New test cases for BUG #16819, 16821, and 16822
sql/handler.h:
  ensure we don't get hanging after calling change_partition